<resources>
    <string name="app_name">Minimal Games</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation_home">Inicio</string>
    <string name="bottom_navigation_games">Juegos</string>
    <string name="bottom_navigation_video_games_companies">Desarrolladoras</string>
    <string name="bottom_navigation_event">Eventos</string>

    <!-- Login & SignUp Activity -->
    <string name="msg_email_required">Debe ingresar un correo</string>
    <string name="msg_email_invalid">Correo invalido</string>
    <string name="msg_password_required">Debe ingresar una contraseña</string>
    <string name="msg_password_length_invalid">La contraseña debe tener al menos 6 caracteres</string>
    <string name="msg_user_password_incorrect">Usuario y/o contraseña incorrecta</string>
    <string name="required_text">Requerido</string>
    <string name="input_email">Email</string>
    <string name="input_password">Contraseña</string>
    <string name="input_confirm_password">Confirmar Contraseña</string>
    <string name="action_create_account">Registrarte</string>
    <string name="Signup">Regístrate</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="action_login">Ingresar</string>
    <string name="action_back">Volver</string>
    <string name="msg_password_confirm_invalid">Las contraseñas no coinciden</string>
    <string name="msg_confirm_password_required">Debe confirmar su contraseña</string>
    <string name="msg_account_created">Tu cuenta ha sido creada satisfactoriamente</string>
    <string name="msg_account_created_error">No se ha podido registrar su cuenta</string>
    <string name="game">Juego</string>
    <string name="category">Categoría</string>
    <string name="fav_game">Me gusta</string>
    <string name="price">Precio</string>
</resources>