<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".View.activityLogin"
        android:layout_gravity="center"
        android:layout_marginTop="-25dp">
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_marginTop="5dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/required_text"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                android:layout_marginTop="35dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:hint="@string/input_email"
                    android:drawablePadding="5dp"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_user"
                    android:gravity="left|center_horizontal"
                    tools:ignore="RtlHardcoded" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:helperText="@string/required_text"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_password"
                    android:drawablePadding="5dp"
                    android:lines="1"
                    android:drawableStart="@drawable/ic_lock"
                    android:gravity="left|center_horizontal"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/action_login" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:id="@+id/labelSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/labelSignUp"
                    android:text="@string/Signup"
                    android:textColor="@color/purple_700"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml"
                    />
            </RelativeLayout>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>