<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="@dimen/game_item_height"
    app:cardCornerRadius="@dimen/game_item_corner_radius"
    android:layout_marginBottom="@dimen/margin_sm">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/game_item_height"
            android:background="@mipmap/ic_launcher"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/game_item_content_padding"
            android:paddingBottom="@dimen/game_item_content_padding"
            android:background="@color/purple_700">
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game"
                android:textColor="@color/white"
                android:textSize="@dimen/game_item_name_textsize">
            </TextView>
            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="@dimen/game_item_category_textsize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/chkFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/ic_favorite">
                </CheckBox>
                <TextView
                    android:id="@+id/txtFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_game"
                    android:textSize="@dimen/game_item_more_textsize"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_sm">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="@dimen/game_item_more_textsize"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_gravity="end"
                        android:layout_marginRight="@dimen/margin_sm_right"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</androidx.cardview.widget.CardView>